[package]
name = "stegcloak"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.57"
aes = "0.8.4"
rand = { version = "0.8.5", features = ["getrandom"] }
flate2 = "1.0.28"
pbkdf2 = { version = "0.12.2", features = ["simple"] }
sha2 = "0.10.8"
cbc = "0.1.2"
hmac = "0.12.1"
ctr = "0.9.2"
itertools = "0.12.1"
