[package]
name = "stegcloak"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "Hides secrets inside text by compressing and encrypting the secret before cloaking it with special unicode invisible characters"
repository = "https://github.com/MolotovCherry/stegcloak"
keywords = ["steganography", "text", "hide", "zwc", "zero-width-character"]
categories = ["encoding"]

[features]
wasm = ["getrandom"]

[dependencies]
thiserror = "1.0.57"
aes = "0.8.4"
rand = { version = "0.8.5", features = ["getrandom"] }
flate2 = "1.0.28"
pbkdf2 = { version = "0.12.2", features = ["simple"] }
sha2 = "0.10.8"
cbc = "0.1.2"
hmac = "0.12.1"
ctr = "0.9.2"
itertools = "0.12.1"
getrandom = { version = "0.2.12", features = ["js"], optional = true }
aho-corasick = "1.1.2"
bincode = "2.0.0-rc.3"
